--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
     "nodemon": "^3.0.1",
+    "promise": "^8.3.0",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
